# ringiflow

./: .env.template  .git-blame-ignore-revs  .gitignore  .mcp.json  .mise.toml  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.ja.md  README.md  justfile  lefthook.yaml  lefthook.yml  mprocs.yaml  package.json  pnpm-lock.yaml
backend/: .env.api-test  .env.api-test.template  .env.template  .rustfmt.toml  Cargo.toml  Dockerfile  clippy.toml  deny.toml  schema.sql
backend/.sqlx/: query-000a8c91507b0186f479d5095bc16cc80752bc0d200c36986ac0e7ad359d5745.json  query-01fae51f7825ea5e6c4513bb6e6a6963be65deee2210baf7c861ec9a53b81b45.json  query-03f2f8f756f329852e4694b10ba8ad49c9c982fa303413163c7cd54b28b570a0.json  query-043f3c62914da426486190822b821226fc9d73316fe95e928b04474df3c0d5bc.json  query-04a764f28dbe08076f422abb121b50546ba1d16fcc2b38c693c7c43606ab617b.json  query-068e217b48a39fde56e466d6c54a16c68b45325d35bb4d4a4860eb2df0795a9c.json  query-0a7bb6c4964435792103b6e51162704445d5f1871e0cdc951dcda70120b445f6.json  query-0c12eeea61287203ad435963bb3468e8d6f8305fd61e3b3c489674bfb0307714.json  query-0d6e778a3d41e02c9b56d7d5720ba0999d678b60177ef3ba81abfe92142e1461.json  query-0e29717ad4277b573322f688ff06c36e1fa30dbac22d04f518de0ac6cc7bf83f.json  query-123d4c14007a26d3977350281d91a4892fe646c5d2a29722311b1fa84c9be18d.json  query-13b728df91e1c3981754fb645f8cdcecb49d83e0dc701d2fe7ed0a79822313db.json  query-13d822ce6be3022edf6e811090d42829f22c8900acc284e994282583e386d8b0.json  query-145747a7e4619742b4ba670197f496eb2f9f59cf3c8540925ba4031601f288dd.json  query-159cf0a19a41689ab08becf67058a2c4010e54baa6bf682e48b25370e6ddf659.json  query-161850fb45b2a849bc95ef475873bc7a9bc628139ed6734ce5fdccf5c908c74a.json  query-17109a8fd2be99f4c480682f57e3044dee9d3520e8908379c9bf8daeedfd7a9b.json  query-18292341b1b58d521386d638deba084cd4645943e60a23543dfdb44727fd888b.json  query-18cfe13d6f54bbbbb3780dc0723bd5f30f6a942e90218e32e2386ece13dd2344.json  query-1da097f10004cd24fa17f74335e9b6d90df0d61f596c6d28c15edd3f03d47f2c.json  query-1f751ad4551dbdc5264124dc3203b4ba6a29f176949adfaaf8319ec530d82aba.json  query-205a57ab571f31a77678d2a9a9c264b56300da3cef6cca3692810374182bc1ce.json  query-243355a109d045125adb25e932d86a457f113de1e1e831827302e02e0d1479d3.json  query-258c15c81db1e8d348c089f1c15203cd131270b5ae3680f3fdc2b5b065797e71.json  query-25fcb70a8b58f7f9a1b6ed06329d4dfdcda01ea42343c1273bfb8d3bbd32a150.json  query-2679d2a1d0b1e296df847fbcc627d68fcdd059348a347ca4a813ad6d3218a4d0.json  query-295b91bce6f7252b39c97937ada460a92775190d4793dae9f624991175f4196d.json  query-2a3a2c51d3126edce3e95ca6c17b6dd6bcbca5f1cf04bfca7dfa9dbbca7c2d16.json  query-2a8dc6d9591cb90fe76b7a95f4e00bfe497628a766f2903c3b875b01ccd32551.json  query-2ad3ce45eaa0a81feffc9d37a533f0b9af5d6a8601523b0785915dc3036bedbc.json  query-2b92b8cfbe0d173c36e8cdcc28448f7dcac5a3ea85e337c0971e7653c8ec1b49.json  query-2d8fd5a655df2ff4e33874c28c772f614eee4725481ff81ef3f7c7b645cc34dc.json  query-2f01c718b4073613d00b3eda48b82981b261f5bee94f4ef40811601b44d4d24b.json  query-2f259cdf09a74b2c26ebe07719b3d1959afb31a605b1ad8ccf4f06dc4233a2a4.json  query-311daac43302544affe943f29daa7327424e13d399b94cc396045ee000cef021.json  query-31b4fba1ea6da5451ecca79679109e051434e6b5706d41511c843c9b09498851.json  query-31b8ab31c6c51bf2c244f8d8cafeff318f11cf51a13d0cce91c976f52c88e4f1.json  query-33fcf63c4b2e9afb2dfa3799c0ed20e842ddbb54c0e94951da918cb3085ec778.json  query-36515e662fbdaeb52b793bf7f724d0bbc7f56b69eef5bcc331fe666347ea9e5f.json  query-36edbce14ede0a881f76530ca7d61b8ddc9b43e20bee46e5d521a24553df26ef.json  (+142 more)
backend/apps/auth-service/: Cargo.toml
backend/apps/auth-service/src/: config.rs  error.rs  handler.rs  main.rs  usecase.rs
backend/apps/bff/: Cargo.toml
backend/apps/bff/src/: app_builder.rs  client.rs  config.rs  dev_auth.rs  error.rs  handler.rs  lib.rs  main.rs  middleware.rs  openapi.rs
backend/apps/bff/tests/: auth_integration_test.rs  openapi_spec.rs  request_id_test.rs  workflow_definition_authz_test.rs
backend/apps/core-api/: Cargo.toml
backend/apps/core-api/migrations/: 20260115000003_create_roles.sql  20260115000006_create_workflow_instances.sql  20260115000008_seed_system_data.sql
backend/apps/core-service/: Cargo.toml
backend/crates/domain/: Cargo.toml
backend/crates/infra/: Cargo.toml  build.rs
backend/crates/shared/: Cargo.toml
backend/migrations/: 20260115000001_create_tenants.sql  20260115000002_create_users.sql  20260115000003_create_roles.sql  20260115000004_create_user_roles.sql  20260115000005_create_workflow_definitions.sql  20260115000006_create_workflow_instances.sql  20260115000007_create_workflow_steps.sql  20260115000008_seed_system_data.sql  20260115000009_update_seed_password_hash.sql  20260122000001_create_auth_schema.sql  20260122000002_migrate_password_to_credentials.sql  20260122000003_drop_users_password_hash.sql  20260125000001_seed_auth_credentials.sql  20260128000001_seed_workflow_instances.sql  20260128000002_add_version_to_workflows.sql  20260129000001_seed_workflow_steps.sql  20260202000001_create_display_id_counters.sql  20260202000002_add_display_number_to_workflow_instances.sql  20260202000003_set_display_number_not_null.sql  20260205000001_add_display_number_to_workflow_steps.sql  20260205000002_set_workflow_steps_display_number_not_null.sql  20260206000001_add_display_number_to_users.sql  20260206000002_set_users_display_number_not_null.sql  20260210000001_add_tenant_id_to_workflow_steps.sql  20260210000002_add_tenant_id_to_user_roles.sql  20260210000003_enable_rls_policies.sql  20260212000001_seed_multi_step_workflow_definition.sql  20260212000002_create_workflow_comments.sql  20260213000001_add_changes_requested_status.sql  20260219000001_seed_additional_data.sql  20260220000001_add_workflow_definition_manage_permission.sql  20260221000001_add_position_to_seed_definitions.sql  20260224000001_fix_seed_current_step_id.sql  20260225000001_create_folders.sql  20260225000002_create_notification_logs.sql  20260226000001_create_documents.sql  20260308000001_seed_file_upload_workflow_definition.sql  README.md
(+2322 files in other folders)
