[workspace]
resolver = "2"
members = [
    "apps/bff",
    "apps/core-api",
    "crates/domain",
    "crates/infra",
    "crates/shared",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["RingiFlow Team"]
license = "MIT"
repository = "https://github.com/ka2kama/ringiflow"

[workspace.dependencies]
# Web フレームワーク
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# シリアライゼーション
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# データベース
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Redis
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }

# ロギング・トレーシング
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# エラーハンドリング
thiserror = "2"
anyhow = "1"

# 非同期
async-trait = "0.1"

# ユーティリティ
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

# パスワード検証
argon2 = "0.5"

# テスト
tokio-test = "0.4"
pretty_assertions = "1.4"
rstest = "0.26"

# 内部クレート
ringiflow-domain = { path = "crates/domain" }
ringiflow-infra = { path = "crates/infra" }
ringiflow-shared = { path = "crates/shared" }

[profile.release]
overflow-checks = true
debug = "line-tables-only"
strip = "none"
