[workspace]
resolver = "2"
members = [
    "apps/auth-service",
    "apps/bff",
    "apps/core-service",
    "crates/domain",
    "crates/infra",
    "crates/shared",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["RingiFlow Team"]
license = "MIT"
repository = "https://github.com/ka2kama/ringiflow"

[workspace.dependencies]
# Web フレームワーク
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "request-id"] }

# シリアライゼーション
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# データベース
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Redis
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }

# AWS SDK（DynamoDB 監査ログ、S3 ドキュメント管理）
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
base64 = "0.22"

# メール通知
aws-sdk-sesv2 = "1"
lettre = { version = "0.11", default-features = false, features = ["tokio1", "smtp-transport", "builder"] }
tera = "1"

# HTTP クライアント
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
http = "1"

# ロギング・トレーシング
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# エラーハンドリング
thiserror = "2"
anyhow = "1"

# 非同期
async-trait = "0.1"

# ユーティリティ
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
dotenvy = "0.15"
urlencoding = "2.1"
itertools = "0.14"
regex = "1"
config = "0.15"
maplit = "1"
bytes = "1"
rand = "0.9"
url = "2"

# derive マクロ拡張
derive_more = { version = "2", features = ["from", "display", "deref", "constructor"] }
strum = { version = "0.27", features = ["derive"] }
validator = { version = "0.20", features = ["derive"] }

# パスワード検証
argon2 = "0.5"

# 暗号
subtle = "2.6"

# OpenAPI
utoipa = { version = "5", features = ["chrono", "uuid", "yaml", "preserve_order"] }

# テスト
tokio-test = "0.4"
pretty_assertions = "1.4"
rstest = "0.26"
insta = "1"

# 内部クレート
ringiflow-domain = { path = "crates/domain" }
ringiflow-infra = { path = "crates/infra" }
ringiflow-shared = { path = "crates/shared" }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
manual_let_else = "deny"
cloned_instead_of_copied = "deny"
semicolon_if_nothing_returned = "deny"
redundant_else = "deny"
implicit_clone = "deny"

[profile.release]
opt-level = 1
overflow-checks = true
debug = "line-tables-only"
strip = "none"
