[package]
name = "ringiflow-bff"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ringiflow-domain.workspace = true
ringiflow-infra.workspace = true
ringiflow-shared.workspace = true
axum.workspace = true
axum-extra.workspace = true
reqwest.workspace = true
async-trait.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
time.workspace = true
dotenvy.workspace = true
subtle.workspace = true
urlencoding.workspace = true

[features]
default = ["dev-auth"]
dev-auth = []

[dev-dependencies]
tokio-test.workspace = true
pretty_assertions.workspace = true
http.workspace = true
