[package]
name = "ringiflow-bff"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "ringiflow-bff"

[dependencies]
ringiflow-domain.workspace = true
ringiflow-infra.workspace = true
ringiflow-shared = { workspace = true, features = ["openapi", "observability"] }
axum.workspace = true
axum-extra.workspace = true
redis.workspace = true
reqwest.workspace = true
async-trait.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
time.workspace = true
dotenvy.workspace = true
subtle.workspace = true
urlencoding.workspace = true
rand.workspace = true
utoipa.workspace = true

[features]
default = ["dev-auth"]
dev-auth = []

[[bin]]
name = "generate-openapi"
path = "src/bin/generate_openapi.rs"

[dev-dependencies]
tokio-test.workspace = true
pretty_assertions.workspace = true
http.workspace = true
insta.workspace = true
