[package]
name = "ringiflow-core-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ringiflow-domain.workspace = true
ringiflow-infra.workspace = true
ringiflow-shared = { workspace = true, features = ["observability"] }
async-trait.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenvy.workspace = true
itertools.workspace = true

[dev-dependencies]
ringiflow-core-service = { path = ".", features = ["test-utils"] }
ringiflow-domain = { workspace = true, features = ["test-support"] }
ringiflow-infra = { workspace = true, features = ["test-utils"] }
tokio-test.workspace = true
pretty_assertions.workspace = true
async-trait.workspace = true

[features]
# テストユーティリティを公開する feature
test-utils = [
    "ringiflow-domain/test-support",
    "ringiflow-infra/test-utils",
]
