[package]
name = "ringiflow-domain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
derive_more.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
