[package]
name = "ringiflow-infra"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ringiflow-domain.workspace = true
ringiflow-shared.workspace = true
async-trait.workspace = true
sqlx.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
argon2.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
tokio-test.workspace = true
uuid.workspace = true
