[package]
name = "ringiflow-infra"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ringiflow-domain.workspace = true
async-trait.workspace = true
sqlx.workspace = true
redis.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-sesv2.workspace = true
base64.workspace = true
lettre.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tokio.workspace = true
argon2.workspace = true
tracing.workspace = true

[lints]
workspace = true

[features]
test-utils = []

[dev-dependencies]
dotenvy.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
tokio-test.workspace = true
uuid.workspace = true
