[package]
name = "ringiflow-shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
openapi = ["dep:utoipa"]
observability = ["dep:tracing-subscriber", "dep:tracing-error", "dep:http", "dep:tower-http", "dep:tower", "dep:tracing", "dep:uuid"]

[dependencies]
http = { workspace = true, optional = true }
serde.workspace = true
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-error = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[dev-dependencies]
http.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
